--- a/StatelessViewModels/MainWindow.xaml
+++ b/StatelessViewModels/MainWindow.xaml
@@ -4,6 +4,14 @@
         xmlns:v="clr-namespace:StatelessViewModels.Views"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition
+                Width="194*" />
+            <ColumnDefinition
+                Width="323*" />
+        </Grid.ColumnDefinitions>
         <v:MainView />
+        <v:ItemDetailView
+            Grid.Column="1" />
     </Grid>
 </Window>
