--- a/StatelessViewModels/Views/MainView.xaml
+++ b/StatelessViewModels/Views/MainView.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
-             DataContext="{Binding Main, Source={StaticResource Locator}}">
+             DataContext="{Binding Main, Source={StaticResource Locator}}"
+             Loaded="UserControl_Loaded_1">
     <Grid>
         <StackPanel>
             <TextBox
